--- a/index.html
+++ b/index.html
@@ -1,10 +1,133 @@
 <html>
-	<head>
-		<title>
-			Hello World
-		</title>
-	</head>
-	<body>
-		Write your code for the submission by editing this file
-	</body>
+    <head>
+        <title>Covid Guide</title>
+        <link href = "style.css" rel = "stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <style>
+            table, th, td {
+              border: 5px solid #4C0027;
+              border-collapse: collapse;
+            }
+            th, td {
+              background-color: #fff;
+            }
+        </style>
+    </head>
+    <body>
+        <a href="#home" class='navitem1'>Home</a>
+        <a href="#tips" class='navitem2'>Tips</a>
+        <a href="#symptoms" class='navitem3'>Symptoms</a>
+        <a href="#FAQ" class='navitem4'>FAQs</a>
+        <a href="#youtube" class='navitem5'>YouTube</a>
+        <div class = "confused" >
+            Confused about where to get correct information about COVID-19 ?
+        </div>
+        <div class = "worry">
+            Don't worry we got you !
+        </div>
+        <div class = "corona">
+            <img src="https://csciitd-my.sharepoint.com/personal/tt1201099_iitd_ac_in/Documents/CovidGuide%20Assignment/Virus-rafiki%201.png" width="500" height="500">
+        </div>
+        <div class = "bg2 tips">
+            <a name = "tips"></a>
+            <br>
+            Tips
+        </div>
+        <div class = "boxed pic2">
+            <img src="https://csciitd-my.sharepoint.com/personal/tt1201099_iitd_ac_in/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment%2FFFP2%20Face%20mask%2Damico%201%2Epng&parent=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment" width="346" height="346">
+        </div>
+        <div class = "boxed1 wear_mask">
+            Wear Mask.
+        </div>
+        <div class = "boxed2 pic3">
+            <img src="https://csciitd-my.sharepoint.com/personal/tt1201099_iitd_ac_in/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment%2FHandwashing%2Damico%201%2Epng&parent=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment" width="346" height="346">
+        </div>
+        <div class = "boxed3 wear_mask2">
+            Wash Hands.
+        </div>
+        <div class = "bg3 symptoms">
+            <a name = "symptoms"></a>
+            <br>
+            Symptoms
+        </div>
+        <div class = "table">
+            <table style="width:100%">
+                <tr height = "100px">
+                    <th>Symptom</th>
+                    <th>Severity</th> 
+                    <th>Advice</th>
+                    </tr>
+                <tr height = "150px">
+                    <td style="text-align:center">Fever</td>
+                    <td style="text-align:center">Mild</td>
+                    <td style="text-align:center">Drink plenty of fluids,<br>particularly water</td>
+                </tr>
+                <tr height = "150px">
+                    <td style="text-align:center">Cold</td>
+                    <td style="text-align:center">Mild</td>
+                    <td style="text-align:center">Drink plenty of fluids,<br>particularly water</td>
+                </tr>
+                <tr height = "150px">
+                    <td style="text-align:center">Cough</td>
+                    <td style="text-align:center">Mild</td>
+                    <td style="text-align:center">Drink plenty of fluids,<br>particularly water</td>
+                </tr>
+                <tr height = "150px">
+                    <td style="text-align:center">Tiredness</td>
+                    <td style="text-align:center">Mild</td>
+                    <td style="text-align:center">Drink plenty of fluids,<br>particularly water</td>
+                </tr>
+            </table>
+        </div>
+        <div class = "bg4 faq">
+            <a name = "FAQ"></a>
+            <br>
+            FAQs
+        </div>
+        <div class = "boxed4"></div>
+        <div class = "boxed5 table2" style="text-align: center;">  
+            What is COVID-19 ?
+            <br>
+            <br>
+            <div class = "table3">  
+            COVID-19 is a disease caused by a virus called SARS-CoV-2. Most people with COVID-19 have mild symptoms, but some people can become severely ill. Although most people with COVID-19 get better within weeks of illness, some people experience post-COVID conditions. Post-COVID conditions are a wide range of new, returning, or ongoing health problems people can experience more than four weeks after first being infected with the virus that causes COVID-19. Older people and those who have certain underlying medical conditions are more likely to get severely ill from COVID-19. Vaccines against COVID-19 are safe and effective
+            </div>
+        </div>
+        <div class = "boxed6 table2" style="text-align: center;">  
+            Should I use soap and water or hand sanitizer to protect myself?
+            <div class = "table3"> 
+                <br>
+                <br> 
+                Handwashing is one of the best ways to protect yourself and your family from getting sick. Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food. If soap and water are not readily available, use an alcohol-based hand sanitizer with at least 60% alcohol.
+            </div>
+        </div>
+        <div class = "boxed7 table2" style="text-align: center;">  
+            What are the symptoms and complications that COVID-19 can cause?
+            <div class = "table3">
+            <br>
+            <br>
+            People with COVID-19 have reported a wide range of symptoms - from mild symptoms to severe illness. Symptoms may appear 2-14 days after exposure to the virus. If you have fever, cough, or other symptoms, you might have COVID-19.
+            </div>
+        </div>
+        <div class = "yt">
+            <a name = "YouTube"></a>
+            YouTube
+        </div>
+        <div class = "link">
+            <iframe width="759" height="444.93" src="https://www.youtube.com/embed/qHksVwOrpbE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class = "made name">
+            <br>
+            <br>
+            Made by Ishaan Popli
+        </div>
+    </body>
 </html>
