--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             Tips
         </div>
         <div class = "boxed pic2">
-            <img src="https://csciitd-my.sharepoint.com/personal/tt1201099_iitd_ac_in/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment%2FFFP2%20Face%20mask%2Damico%201%2Epng&parent=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment" width="346" height="346">
+            <img src="https://github.com/ishaanpoplii/DevClub-Assignment1/blob/main/1.png" width="346" height="346">
         </div>
         <div class = "boxed1 wear_mask">
             Wear Mask.
         </div>
         <div class = "boxed2 pic3">
-            <img src="https://csciitd-my.sharepoint.com/personal/tt1201099_iitd_ac_in/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment%2FHandwashing%2Damico%201%2Epng&parent=%2Fpersonal%2Ftt1201099%5Fiitd%5Fac%5Fin%2FDocuments%2FCovidGuide%20Assignment" width="346" height="346">
+            <img src="https://github.com/ishaanpoplii/DevClub-Assignment1/blob/main/2.png" width="346" height="346">
         </div>
         <div class = "boxed3 wear_mask2">
             Wash Hands.
