--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             Tips
         </div>
         <div class = "boxed pic2">
-            <img src="https://github.com/ishaanpoplii/DevClub-Assignment1/blob/main/1.png" width="346" height="346">
+            <img src="https://raw.githubusercontent.com/ishaanpoplii/DevClub-Assignment1/main/1.png" width="346" height="346">
         </div>
         <div class = "boxed1 wear_mask">
             Wear Mask.
         </div>
         <div class = "boxed2 pic3">
-            <img src="https://github.com/ishaanpoplii/DevClub-Assignment1/blob/main/2.png" width="346" height="346">
+            <img src="https://raw.githubusercontent.com/ishaanpoplii/DevClub-Assignment1/main/2.png" width="346" height="346">
         </div>
         <div class = "boxed3 wear_mask2">
             Wash Hands.
